# dotfiles

./: .Xmodmap  .Xresources  .alacritty.yml  .bashrc  .conkerorrc  .conkyLeftrc  .conkyRightrc  .conkyrc  .dunstrc  .emacs  .gitconfig  .gitignore  .gitmodules  .mg  .redshift.conf  .spacemacs  .spacemacs.bak  .stalonetrayrc  .synergyS  .tmux.conf  .vimrc  .xinitrc  .xmobarrc  .xsessionrc  .zprofile  .zshenv  .zshrc  custom.zsh-theme  deb_install.sh  deb_pkgs.txt  display.sh  freebsd_install.sh  freebsd_pkgs.txt  install.sh  osx.sh  telser.kll  telserlayer1.kll  terminfo  tint2.conf  tmux.conf  (+1 more)
.i3/: .i3status.conf  config
.lein/: profiles.clj
.xmonad/: build  cabal.project.local  hie.yaml  xmonad-config.cabal  xmonad.hs
cronscripts/: apt_upgradable.sh  freebsd_upgradable.sh  pkg_upgradable.sh  xbps_upgradable.sh
crunch_install/: apt_preferences  crunch_install.sh  crunch_pkgs.txt
cv/: res.cls  resume.tex
deb_install/: apt_preferences  deb_install.sh  deb_pkgs.txt
dzen/: dzen.conkyrc  dzen_conky.lua
emacs/: Cask  base-custom.el  base.el  buffer-mgmt.el  buffer.el  display.el  dockerfile-custom.el  ercrc.el  haskell-custom.el  json-yaml-xml.el  org-custom.el  personal.el  proglang.el
emacs-old/: org-custom.el
emacs.bak/: Cask  buffer-mgmt.el  org-custom.el
freebsd/: freebsd_installer.sh  freebsd_pkgs.txt  freebsd_postinstall.sh  pkglist  tails_pkgs.txt
kll/: telser.kll
konsole/: bertrand.profile  default.colorscheme  einstein.profile  mosh-treviselsercom.profile  telser-blue-bkgnd.colorscheme  telser-einstein-colors.colorscheme  temujin.profile  (+7 more)
(+94 files in other folders)
