name:          xmonad-config
version:       0.0
synopsis:      XMonad Config File
license:       BSD2
author:        Trevis <>
maintainer:    Trevis <>
copyright:     Copyright (c) 2021 Trevis Elser
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

executable xmonad-config
  main-is: xmonad.hs
  build-depends: base, containers, xmonad, xmonad-contrib, unix, X11
  ghc-options: -j -O2
